# mailfold-python

./: .gitignore  README.md  pyproject.toml
mailfold/: __init__.py  client.py  errors.py  models.py
