[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailfold-client"
version = "0.1.0"
description = "Official Python client SDK for the Mailfold API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Sviatoslav Ivanov" },
]
keywords = ["mailfold", "webmail", "email", "imap", "smtp", "api-client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Email",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/isi1988/Mailfold"
Repository = "https://github.com/isi1988/mailfold-python"

[tool.hatch.build.targets.wheel]
packages = ["mailfold"]
